--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
